--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <header>
+        <div class="company-logo">
+            <img src="images/ic-logo.svg" class="logo" alt="logo"> 
+            <h3>COLMAR <span>ACADEMY</span></h3>
+        </div>
+
+           <nav>
+              <a href="#">On campus</a>
+              <a href="#">Online</a>
+              <a href="#">or companies</a>
+              <a href="#">Sign in</a>
+            </nav>
+    </header>
 
 </body>
 </html>
