Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,20 +9,75 @@
     <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">-->
 
 </head>
-<body>
+
     <header>
         <div class="company-logo">
             <img src="images/ic-logo.svg" class="logo" alt="logo"> 
-            <h3>COLMAR <span>ACADEMY</span></h3>
+            <h3>COLMAR<span>ACADEMY</span></h3>
         </div>
 
            <nav>
               <a href="#">On campus</a>
               <a href="#">Online</a>
               <a href="#">or companies</a>
-              <a href="#">Sign in</a>
+              <a href="#"><span>Sign in</span></a>
             </nav>
     </header>
+
+    <main>
+        <section class="banner-container">
+            <div class="banner-image">
+                <img src="images/banner.jpg" alt="banner">
+            </div>
+
+            <div class="banner-info">
+                <h1>Learn something <br>new everyday</h1>
+                <p>Lorem ipsum dolor sit amet <br>consectetuer adipiscing elit</p>
+                <button class="btn">Start here</button>
+        </section>
+
+        <section class="information-container">
+            <div class="information-image">
+                <img src="images/information-main.jpg" alt="man reading a book">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <h5>"Curabitur vitae libero in ipusm porttitor consequat. Aliquam et commodo lectus, nec consequat neque.
+                    Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur dolor consequat,
+                    tristique ligula"</h5>
+                 <p>Emanual, Sr Strategist at Hiring.com</p>
+            </div>
+
+            <div class="side column">
+                <div class="title">
+                    <img src="images/information-orientation.jpg" alt="orientation info">
+                    <div class="info">
+                        <h3>Orientation Date</h3>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+
+                <div class="title">
+                    <img src="images/information-campus.jpg" alt="our campus">
+                    <div class="info">
+                        <h3>Our Campus</h3>
+                        <p>Find which campus is close by you</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+
+                <div class="title keynote">
+                    <img src="images/information-guest-lecture.jpg" alt="guest lecturer">
+                    <div class="info keynote">
+                        <h3>Our Guest Lecture</h3>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <a href="#">Read more</a>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+    </main>
 
 </body>
 </html>
