--- a/index.html
+++ b/index.html
@@ -124,6 +124,110 @@
                         </div>
                     </div>
                 </div>
-    
+            </div>
+
+            <div class="learning container">
+                <div class="heading">
+                    <h1>Start Learning</h1>
+                </div>
+                <div class="tile-images">
+                    <div class="course">
+                        <img src="images/course-software.jpg" alt="software engineering">
+                        <h2>Software Engineering</h2>
+                        <span>COURSES</span>
+                        <p>Web Development, Mobile Development, iOT, AAPIs</p>
+                    </div>
+
+                    <div class="course">
+                        <img src="images/course-computer-art.jpg" alt="graphic design">
+                        <h2>Computer Art</h2>
+                        <span>COURSES</span>
+                        <p>Imaging & Design, Web Design, Motion Graphic & Visual Effects</p>
+                    </div>
+
+                    <div class="course">
+                        <img src="images/course-design.jpg" alt="user experience and design track">
+                        <h2>Design</h2>
+                        <span>COURSES</span>
+                        <p>User Experience Design, User Research, Visual Design</p>
+                    </div>
+
+                    <div class="course">
+                        <img src="images/course-data.jpg" alt="data science">
+                        <h2>Data</h2>
+                        <span>COURSES</span>
+                        <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+
+                    <div class="course">
+                        <img src="images/course-business.jpg" alt="business management">
+                        <h2>Business</h2>
+                        <span>COURSES</span>
+                        <p>Product Development, Business Development, Startup</p>
+                    </div>
+
+                    <div class="course">
+                        <img src="images/course-marketing.jpg" alt="marketing">
+                        <h2>Marketing</h2>
+                        <span>COURSES</span>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+
+                <div class="mobile learning">
+                    <ul>
+                        <li><a href="#" style="text-decoration: one;">Software Engineering</a></li>
+                        <li><a href="#" style="text-decoration: one;">Computer art</a></li>
+                        <li><a href="#" style="text-decoration: one;">UX Design & Research</a></li>
+                        <li><a href="#" style="text-decoration: one;">Data Science</a></li>
+                        <li><a href="#" style="text-decoration: one;">Business Management</a></li>
+                        <li><a href="#" style="text-decoration: one;">Marketing</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="thesis container">
+                <div class="heading">
+                    <h1>Thesis Exhibit</h1>
+                </div>
+                <div class="thesis info">
+                    <div class="video info">
+                        <video width="auto" height="auto" controls autoplay muted loop title="thesis video">
+                            <source src="videos/thesis.mp4" type="mp4 video">
+                            Your browser does not support this video tag
+                        </video>
+                        <h2>Reimagine Urban</h2>
+                        <p>"Curabitur vitae libero in ipsum porttitor consequat. Aliquam et commodo lectus, nec
+                            consequat neque. Sed non accumsan urna. Phasellus sed consequat ex. Etiam eget manga
+                            laoreet, efficitur dolor consequat, tristique ligula."</p>
+                    </div>
+                    <div class="information side-banner">
+                        <div class="banner info keynote">
+                            <img src="images/thesis-fisma.jpg" alt="prototype design">
+                            <div class="info">
+                                <h2>Fisma: Design and</h2>
+                                <p>Designer showcase of new protoype product</p>
+                            </div>
+                        </div>
+
+                        <div class="banner info">
+                            <img src="images/thesis-now-and-then.jpg" alt="future and present designs">
+                            <div class="info">
+                                <h2>Now and Then</h2>
+                                <p>Research study about New York</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <footer>
+                <p>&copy 2016 Colmar Academy. All rights reserved</p>
+                <div class="footer nav">
+                    <a href="#">Terms</a>
+                    <a href="#">Privacy</a>
+                </div>
+            </footer>
+
 </body>
 </html>
